# distri-of-population

./: .gitignore  README.md  pyproject.toml
.vim/: coc-settings.json
docs/: 任务书.doc  开题报告.pptx  附件2：浙江大学本科生毕业论文（设计）文献综述和开题报告（参考模板）.docx  附件6：浙江大学本科生毕业论文（设计）承诺书.docx  附件8：浙江大学本科生毕业论文（设计）（参考模板）.docx
papers/: README.md
src/: ID3.py  config.py  demo.ipynb
src/pop/: pop.py
